--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="problem-img" src="https://cdn-icons-png.flaticon.com/512/1924/1924432.png" alt="" height="200px" width="200px">
+            <img class="problem-img" src="images/problem.png" alt="problem-solving-img" height="200px" width="200px">
             <h3>Problem Solving</h3>
             <p>I am pupil at Codeforces, and have 4 ⭐ rating at Codechef. I am giving Competitive contests since a year now.</p>
           </div>
           <div class="skill-row">
-            <img class="typing-img" src="https://cdn-icons.flaticon.com/png/512/3131/premium/3131666.png?token=exp=1650868329~hmac=66eb6a28cf265b5c347a5ede02625d8f" alt=""  height="200px" width="200px">
+            <img class="typing-img" src="images/typing.png" alt="touch-typing-img"  height="200px" width="200px">
             <h3>Touch Typing</h3>
             <p>60+ WPM Average typing speed . Max-94 WPM. I have been practicing touch typing for over a year now.</p>
           </div>
