--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
         <a class="footer-link" href="https://github.com/Deadrohan19">GitHub</a>
         <p id="last-para">© 2022 Rohan Jaiswal. All rights reserved.</p>
       </div>
+    
+        <!-- Start of ChatBot (www.chatbot.com) code -->
+        <script type="text/javascript">
+            window.__be = window.__be || {};
+            window.__be.id = "626298549b4cbc00072ff935";
+            (function() {
+                var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
+                be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
+            })();
+        </script>
+        <!-- End of ChatBot code -->
       
 </body>
 </html>
